# luciq-masking-linter

./: .gitignore  README.md  jitpack.yml  luciq.example.yml  luciq_masking_linter.py  pyproject.toml
.github/workflows/: release-pypi.yml
android-lint/: build.gradle.kts  settings.gradle.kts
android-lint/gradle/wrapper/: gradle-wrapper.properties
android-lint/src/main/java/ai/luciq/masking/lint/: LuciqIssueRegistry.kt  LuciqMaskingEngine.kt  LuciqMaskingGateDetector.kt
android-lint/src/test/java/ai/luciq/masking/lint/: LuciqMaskingEngineTest.kt  LuciqMaskingGateDetectorTest.kt
docs/: keyword-families.md  spec.md
tests/: test_linter.py
tests/fixtures/android_clean/app/: MainActivity.kt
tests/fixtures/android_violations/: luciq.yml
tests/fixtures/android_violations/app/: MainActivity.kt  build.gradle
tests/fixtures/android_waiver/app/: Pay.kt  build.gradle
tests/fixtures/ios_clean/: ViewController.swift
tests/fixtures/ios_violations/: ViewController.swift
